# Quran-coordinate

./: .gitignore  AI_AGENT_GUIDE.md  Documentation.md  LICENSE  README.md  app_version.json  build_word_freq.py  generate_coords.py  generate_coords.py.v1  generate_coords.py.v3  generate_coords.py.v4  images  mushaf  pyproject.toml  server.py  server.py.v1  server.py.v2  server.py.v3  server.py.v4  start.txt
images/: check_images.py
mushaf/: page-001.json  page-002.json  page-003.json  page-004.json  page-005.json  page-006.json  page-007.json  page-008.json  page-009.json  page-010.json  page-011.json  page-012.json  page-013.json  page-014.json  page-015.json  page-016.json  page-017.json  page-018.json  page-019.json  page-020.json  page-021.json  page-022.json  page-023.json  page-024.json  page-025.json  page-026.json  page-027.json  page-028.json  page-029.json  page-030.json  page-031.json  page-032.json  page-033.json  page-034.json  page-035.json  page-036.json  page-037.json  page-038.json  page-039.json  page-040.json  (+1147 more)
npm/: README.md  package.json  tsconfig.json
output.old/: page-003.json  page-005.json  page-006.json  page-007.json  page-009.json  page-010.json  page-011.json  page-013.json  page-014.json  page-015.json  page-019.json  page-020.json  page-021.json  page-022.json  page-025.json  page-027.json  page-030.json  page-035.json  page-036.json  page-037.json  page-038.json  page-042.json  page-043.json  page-044.json  page-046.json  page-047.json  page-049.json  page-051.json  page-054.json  page-059.json  page-060.json  page-061.json  (+272 more)
(+2086 files in other folders)
